--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 }
 
 .footer{
-    background-color: #D1C4E9;
+    background-color: #7f5cbe;
     margin:0px auto;
     padding: 20px 0px 20px 0px;
 }
@@ -19,7 +19,7 @@
 .jumbotron {
     padding:70px 30px 70px 30px;
     margin:0px auto;
-    background: #9575CD ;
+    background: #6d39c7 ;
     color:floralwhite;
 }
 
