--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body{
 
 
 .footer{
-    background-color: #7f5cbe;
+    background-color: #d5c1fa;
     margin:0px auto;
     padding: 20px 0px 20px 0px;
 }
